<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
  <modelVersion>4.0.0</modelVersion>
 
  <parent>
    <artifactId>runtime</artifactId>
    <groupId>org.assimbly</groupId>
    <version>5.0.10-SNAPSHOT</version>
  </parent>

  <name>broker-rest</name>
  <packaging>jar</packaging>

  <artifactId>broker-rest</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
  </properties>

  <distributionManagement> 
        <repository>
            <id>github</id> 
            <name>Temporary Staging Repository</name> 
            <url>https://maven.pkg.github.com/assimbly/runtime</url> 
        </repository> 
    </distributionManagement>

  <dependencies>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>broker</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>

	  <!-- tests -->
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>commons</artifactId>
		  <version>${assimbly.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.testcontainers</groupId>
		  <artifactId>testcontainers</artifactId>
		  <version>${testcontainers.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.assertj</groupId>
		  <artifactId>assertj-core</artifactId>
		  <version>${assertj.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>net.javacrumbs.json-unit</groupId>
		  <artifactId>json-unit-assertj</artifactId>
		  <version>${json-unit-assertj.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>${junit.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-api</artifactId>
		  <version>${junit-jupiter.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-engine</artifactId>
		  <version>${junit-jupiter.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.eclipse.jetty</groupId>
		  <artifactId>jetty-http</artifactId>
		  <version>${jetty.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>com.fasterxml.jackson.core</groupId>
		  <artifactId>jackson-annotations</artifactId>
		  <version>${jackson.version}</version>
		  <scope>test</scope>
	  </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
						<configuration>
							<toolchains>
								<jdk>
									<version>21</version>
								</jdk>
							</toolchains>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
